// Auto-Generated by si-registry!
// Do not edit by hand!
// This means you! It won't last! You'll be sad!

syntax = "proto3";

package si.service_entity_event;
import "google/protobuf/wrappers.proto";
import "si-registry/proto/si.data.proto";
import "si-registry/proto/si.service_entity.proto";
import "si-registry/proto/si.cea.proto";
service ServiceEntityEvent {
  rpc ServiceEntityEventList(ServiceEntityEventListRequest) returns (ServiceEntityEventListReply);
}
message ServiceEntityEvent {
  google.protobuf.StringValue id = 1;
  si.data.DataStorable si_storable = 2;
  google.protobuf.StringValue action_name = 3;
  google.protobuf.StringValue create_time = 4;
  google.protobuf.StringValue updated_time = 5;
  google.protobuf.StringValue final_time = 6;
  google.protobuf.BoolValue success = 7;
  google.protobuf.BoolValue finalized = 8;
  google.protobuf.StringValue user_id = 9;
  repeated google.protobuf.StringValue output_lines = 10;
  repeated google.protobuf.StringValue error_lines = 11;
  google.protobuf.StringValue error_message = 12;
  si.service_entity.ServiceEntity previous_entity = 13;
  si.service_entity.ServiceEntity input_entity = 14;
  si.service_entity.ServiceEntity output_entity = 15;
  si.cea.EntityEventSiProperties si_properties = 16;
}
message ServiceEntityEventListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message ServiceEntityEventListReply {
  repeated si.service_entity_event.ServiceEntityEvent items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
